k8s/task-planner-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-planner-deployment
  labels:
    app: task-planner
spec:
  replicas: 4
  selector:
    matchLabels:
      app: task-planner
  template:
    metadata:
      labels:
        app: task-planner
    spec:
      containers:
        - name: task-planner
          image: shivamshivam01/task-planner:latest
          ports:
            - containerPort: 8081
          livenessProbe:
            httpGet:
              path: actuator/health/liveness
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: actuator/health/readiness
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: actuator/health
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
---
apiVersion: v1
kind: Service
metadata:
  name: task-planner-service
spec:
  selector:
    app: task-planner
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
