k8s/task-planner-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-planner-ingress
  namespace: task-planner
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: <ip>.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: task-planner-service
                port:
                  number: 80
